# Aphelion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  asteroid.json  circles.json  gui.txt  save.json  setup.txt
.github/workflows/: cmake.yml
dev/: CIE_1964.csv  create_black_body_table.py
graphics/: asteroid.ase  ship.ase  sun.ase
include/: Action.hpp  Animation.hpp  Application.hpp  BlackBodyTable.hpp  Body.hpp  DebugInfo.hpp  DebugOverlay.hpp  Event.hpp  GameEvent.hpp  GameplaySystem.hpp  GravitySystem.hpp  GridField.hpp  Input.hpp  InputManager.hpp  LoopedSound.hpp  Matrix.hpp  MusicManager.hpp  Observer.hpp  Paths.hpp  PhysicalModel.hpp  PhysicsSystem.hpp  PolarField.hpp  RenderSystem.hpp  ResourceManager.hpp  Scene.hpp  SceneLoader.hpp  SceneSerializer.hpp  Settings.hpp  SimulationCanvas.hpp  SoundSettings.hpp  TemperatureGraphics.hpp  collisions.hpp  components.hpp  format.hpp  helpers.hpp  polygon.hpp  serializers.hpp  vector.hpp
include/components/: Animations.hpp  Body.hpp  Temperature.hpp  components.hpp
include/states/: AbstractState.hpp  DebugOverlayState.hpp  GameState.hpp  LoadGameState.hpp  MainMenuState.hpp  MapState.hpp  PauseState.hpp  SaveGameState.hpp  SettingsState.hpp  StateStack.hpp
include/systems/: AnimationSystem.hpp  AutoPilotSystem.hpp  CollisionSystem.hpp  GameplaySystem.hpp  LightSystem.hpp  MapSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  SoundEffectsSystem.hpp  ThermodynamicsSystem.hpp
resources/: black_body.json  black_body_data.json  light.frag  newGame.json
resources/entities/: entities.json
resources/gui/: pixelTheme.txt
resources/shaders/: light.frag
saves/: save.json
src/: Animation.cpp  Application.cpp  BlackBodyTable.cpp  Body.cpp  CollisionSystem.cpp  DebugInfo.cpp  DebugOverlay.cpp  GameplaySystem.cpp  GravitySystem.cpp  InputManager.cpp  LoopedSound.cpp  MusicManager.cpp  Paths.cpp  PhysicalModel.cpp  PhysicsSystem.cpp  RenderSystem.cpp  Scene.cpp  SceneLoader.cpp  SceneSerializer.cpp  Settings.cpp  SimulationCanvas.cpp  TemperatureGraphics.cpp  collisions.cpp  components.cpp  format.cpp  main.cpp  polygon.cpp
src/components/: Animations.cpp  Body.cpp  components.cpp
src/states/: AbstractState.cpp  GameState.cpp  LoadGameState.cpp  MainMenuState.cpp  MapState.cpp  PauseState.cpp  SaveGameState.cpp  SettingsState.cpp  StateStack.cpp
src/systems/: AnimationSystem.cpp  AutoPilotSystem.cpp  CollisionSystem.cpp  GameplaySystem.cpp  LightSystem.cpp  MapSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  SoundEffectsSystem.cpp  ThermodynamicsSystem.cpp
test/: polygon.cpp  vector.cpp
